<resources>
    <string name="app_name">GameHub</string>
    <string name="username_file">username.txt</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_add_friend">Add Friend [NYI]</string>
    <string name="menu_mute">Mute [NYI]</string>
    <string name="game_selection_button">Game Selection</string>
    <string name="disconnect_button">Disconnect</string>
    <string name="connect_button">Connect</string>
    <string name="server_port_text">36936</string>
    <string name="server_port_hint">Server port number</string>
    <string name="server_ip_text">213.243.128.99</string>
    <string name="server_ip_hint">Server ip address</string>
    <string name="username_info_text">Choose your username:</string>
    <string name="username_taken_text">Username already in use. Choose another one:</string>
    <string name="username_is_invalid_text">Username contains illegal characters. Choose another one:</string>
    <string name="username_is_too_short_text">Username is too short. Choose another one:</string>
    <string name="username_is_too_long_text">Username is too long. Choose another one:</string>
    <string name="username_text">Guest</string>
    <string name="username_hint">Your username</string>
    <string name="texas_hold_em">Texas Hold \'Em</string>
    <string name="send_message_hint">Type a message</string>
    <string name="send_message_button">Send</string>
    <string name="check_button">Check</string>
    <string name="bet_button">Bet</string>
    <string name="call_button">Call</string>
    <string name="raise_button">Raise</string>
    <string name="all_in_button">All In</string>
    <string name="fold_button">Fold</string>
    <string name="leave_button">Leave</string>
    <string name="take_a_seat_button">Take A Seat</string>
    <string name="my_hand_text">My Hand</string>
    <string name="player1_text">Player1</string>
    <string name="player2_text">Player2</string>
    <string name="player3_text">Player3</string>
    <string name="player4_text">Player4</string>
    <string name="player5_text">Player5</string>
    <string name="player6_text">Player6</string>
    <string name="chips_text">Chips</string>
    <string name="pot_text">Pot</string>
    <string name="small_blind_text">Small Blind</string>
    <string name="big_blind_text">Big Blind</string>
    <string name="dealer_abbr_text">D</string>
    <string name="small_blind_abbr_text">SB</string>
    <string name="big_blind_abbr_text">BB</string>
</resources>
