<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="teukka.Client.TexasHoldEm">

    <TextView
        android:id="@+id/myHandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_hand_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/gameTypeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texas_hold_em"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myHandText" />

    <ImageView
        android:id="@+id/card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card1Text" />

    <TextView
        android:id="@+id/card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card1SuitImage" />

    <ImageView
        android:id="@+id/card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card2Text" />

    <TextView
        android:id="@+id/card3Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card2SuitImage" />

    <ImageView
        android:id="@+id/card3SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card3Text" />

    <TextView
        android:id="@+id/card4Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card3SuitImage" />

    <ImageView
        android:id="@+id/card4SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card4Text"  />

    <TextView
        android:id="@+id/card5Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card4SuitImage" />

    <ImageView
        android:id="@+id/card5SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/myHandText"
        android:layout_toRightOf="@+id/card5Text" />

    <TextView
        android:id="@+id/player1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1_text"
        android:visibility="invisible"
        android:layout_below="@+id/card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player1Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1Text" />

    <ImageView
        android:id="@+id/player1Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player1Text"
        android:layout_toRightOf="@+id/player1Card1Text" />

    <TextView
        android:id="@+id/player1Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player1Text"
        android:layout_toRightOf="@+id/player1Card1SuitImage" />

    <ImageView
        android:id="@+id/player1Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player1Text"
        android:layout_toRightOf="@+id/player1Card2Text" />

    <TextView
        android:id="@+id/player2Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_text"
        android:visibility="invisible"
        android:layout_below="@+id/player1Card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player2Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2Text" />

    <ImageView
        android:id="@+id/player2Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player2Text"
        android:layout_toRightOf="@+id/player2Card1Text" />

    <TextView
        android:id="@+id/player2Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player2Text"
        android:layout_toRightOf="@+id/player2Card1SuitImage" />

    <ImageView
        android:id="@+id/player2Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player2Text"
        android:layout_toRightOf="@+id/player2Card2Text" />

    <TextView
        android:id="@+id/player3Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player3_text"
        android:visibility="invisible"
        android:layout_below="@+id/player2Card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player3Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player3Text" />

    <ImageView
        android:id="@+id/player3Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player3Text"
        android:layout_toRightOf="@+id/player3Card1Text" />

    <TextView
        android:id="@+id/player3Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player3Text"
        android:layout_toRightOf="@+id/player3Card1SuitImage" />

    <ImageView
        android:id="@+id/player3Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player3Text"
        android:layout_toRightOf="@+id/player3Card2Text" />

    <TextView
        android:id="@+id/player4Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player4_text"
        android:visibility="invisible"
        android:layout_below="@+id/player3Card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player4Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player4Text" />

    <ImageView
        android:id="@+id/player4Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player4Text"
        android:layout_toRightOf="@+id/player4Card1Text" />

    <TextView
        android:id="@+id/player4Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player4Text"
        android:layout_toRightOf="@+id/player4Card1SuitImage" />

    <ImageView
        android:id="@+id/player4Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player4Text"
        android:layout_toRightOf="@+id/player4Card2Text" />

    <TextView
        android:id="@+id/player5Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player5_text"
        android:visibility="invisible"
        android:layout_below="@+id/player4Card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player5Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player5Text" />

    <ImageView
        android:id="@+id/player5Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player5Text"
        android:layout_toRightOf="@+id/player5Card1Text" />

    <TextView
        android:id="@+id/player5Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player5Text"
        android:layout_toRightOf="@+id/player5Card1SuitImage" />

    <ImageView
        android:id="@+id/player5Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player5Text"
        android:layout_toRightOf="@+id/player5Card2Text" />

    <TextView
        android:id="@+id/player6Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player6_text"
        android:visibility="invisible"
        android:layout_below="@+id/player5Card1Text"
        android:layout_centerHorizontal="false" />

    <TextView
        android:id="@+id/player6Card1Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player6Text" />

    <ImageView
        android:id="@+id/player6Card1SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player6Text"
        android:layout_toRightOf="@+id/player6Card1Text" />

    <TextView
        android:id="@+id/player6Card2Text"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player6Text"
        android:layout_toRightOf="@+id/player6Card1SuitImage" />

    <ImageView
        android:id="@+id/player6Card2SuitImage"
        android:layout_width="11pt"
        android:layout_height="11pt"
        android:layout_below="@+id/player6Text"
        android:layout_toRightOf="@+id/player6Card2Text" />

    <TextView
        android:id="@+id/chipsLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_text"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gameTypeText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="100"
        android:id="@+id/chipsText"
        android:layout_below="@+id/chipsLabelText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/potLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pot_text"
        android:layout_below="@+id/chipsText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/potText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/potLabelText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/smallBlindLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_blind_text"
        android:layout_below="@+id/potText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/smallBlindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/smallBlindLabelText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/bigBlindLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/big_blind_text"
        android:layout_below="@+id/smallBlindText"
        android:layout_alignParentRight="true" />

    <TextView
        android:id="@+id/bigBlindText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_below="@+id/bigBlindLabelText"
        android:layout_alignParentRight="true" />

    <ProgressBar
        android:id="@+id/turnTimerProgressBar"
        style="@style/CustomProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:visibility="invisible"
        android:layout_below="@+id/player1Text"
        android:layout_alignTop="@+id/player1Card2SuitImage"
        android:layout_alignBottom="@+id/player1Card2SuitImage"
        android:layout_toLeftOf="@+id/gameTypeText"
        android:layout_toRightOf="@id/player1Card2SuitImage" />

    <Button
        android:id="@+id/sitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_a_seat_button"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/horizontalLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/checkCallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_button"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_weight="1" />

        <Button
            android:id="@+id/betRaiseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bet_button"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_weight="1" />

        <Button
            android:id="@+id/foldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fold_button"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_weight="1" />

        <Button
            android:id="@+id/sitOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_button"
            android:visibility="invisible"
            android:enabled="false"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/sendMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/send_message_hint"
        android:maxLines="1"
        android:imeOptions="actionSend"
        android:inputType="textShortMessage"
        android:maxLength="120"
        android:ems="10"
        android:enabled="false"
        android:paddingRight="50dp"
        android:layout_above="@+id/sitButton" />

    <ImageView
        android:id="@+id/sendMessageImageView"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_media_play"
        android:layout_alignTop="@+id/sendMessageEditText"
        android:layout_alignBottom="@+id/sendMessageEditText"
        android:layout_alignParentRight="true"
        android:tint="@android:color/holo_blue_dark" />

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:stackFromBottom="true"
        android:transcriptMode="normal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/sendMessageEditText"
        android:layout_below="@+id/player6Card1SuitImage" />

    <SeekBar
        android:id="@+id/betRaiseAmountSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignTop="@+id/sendMessageEditText"
        android:layout_alignBottom="@+id/sendMessageEditText" />

    <TextView
        android:id="@+id/dealerButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dealer_abbr_text"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/smallBlindButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_blind_abbr_text"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/bigBlindButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/big_blind_abbr_text"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:visibility="invisible" />

</RelativeLayout>
