<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teukka.Client.MainActivity"
    android:columnCount="3"
    android:rowCount="3"
    android:weightSum="1">

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:divider="@null"
        android:stackFromBottom="true"
        android:transcriptMode="normal"
        android:layout_above="@+id/linearLayout"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/connectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button"
            android:layout_weight="1" />

        <Button
            android:id="@+id/gameSelectionButton"
            android:text="@string/game_selection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="1" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disconnect_button"
            android:enabled="false"
            android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>
